# substrate-module-multisig

./: .gitignore  Cargo.toml  README.md
balances/: Cargo.toml
balances/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  multisig.rs
runtime/wasm/: Cargo.toml  build.sh
src/: chain_spec.rs  cli.yml  main.rs  service.rs
