[package]
name = "srml-balances"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
hex-literal = "0.1.0"
serde = { version = "1.0", default-features = false }
safe-mix = { version = "1.0", default-features = false}
parity-codec = { version = "2.1", default-features = false }
parity-codec-derive = { version = "2.1", default-features = false }
substrate-keyring = { git = "https://github.com/mixbytes/substrate", optional = true }
substrate-primitives = { git = "https://github.com/mixbytes/substrate", default-features = false }
sr-std = { git = "https://github.com/mixbytes/substrate", default-features = false }
sr-io = { git = "https://github.com/mixbytes/substrate", default-features = false }
sr-primitives = { git = "https://github.com/mixbytes/substrate", default-features = false }
srml-support = { git = "https://github.com/mixbytes/substrate", default-features = false }
srml-system = { git = "https://github.com/mixbytes/substrate", default-features = false }

[features]
default = ["std"]
std = [
	"serde/std",
	"safe-mix/std",
	"substrate-keyring",
	"parity-codec/std",
	"parity-codec-derive/std",
	"substrate-primitives/std",
	"sr-std/std",
	"sr-io/std",
	"srml-support/std",
	"sr-primitives/std",
	"srml-system/std",
]
